# yaruu

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  FEATURES.md  README.md  yaruu.code-workspace
cmake/: git_revision.cmake  safeguards.cmake
include/: argh.h  argp_config.h  config.h  daemon.h  pass_through.h  yaruu.h
src/: main.c  passthrough.c
